# Sofia-Chess_Engine

./: CMakeLists.txt  MakeMove.cpp  README.md  attack.cpp  bitboards.cpp  board.cpp  chess.h  data.cpp  evaluate.cpp  hashkeys.cpp  init.cpp  io.cpp  main.cpp  misc.cpp  moveGen.cpp  perft.cpp  pvtable.cpp  search.cpp  uci.cpp  validate.cpp
